# feishu_sdk

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: async_sheet.rs  blocking.rs  feishu_write.rs
src/: auth.rs  lib.rs  sheet.rs
src/blocking/: auth.rs  mod.rs  sheet.rs
tests/: test_sheet.rs
