[package]
name = "feishu_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ['json', "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.10.1"
regex = "1.10.2"

[dev-dependencies]
dotenv = "*"

[[example]]
name = "blocking"
path = "examples/blocking.rs"
