[package]
readme = "README.md"
name = "feishu_sdk"
version = "0.1.0"
edition = "2021"
authors = ["liuhuo"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = "0.4.0"
env_logger = "0.10.1"
regex = "1.10.2"
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
dotenv = "*"

[features]
default = ["reqwest"]
blocking = ["reqwest"]

[[example]]
name = "blocking"
path = "examples/blocking.rs"
required-features = ["blocking"]

[[example]]
name = "async_sheet"
path = "examples/async_sheet.rs"

[[test]]
name = "async_sheet"
path = "tests/test_sheet.rs"
